# estring

./: Cargo.toml  README.md
examples/: calc.rs  dotenv.rs
src/: agg.rs  core.rs  error.rs  lib.rs  std.rs  structs.rs
src/agg/: product.rs  sum.rs
src/core/: low.rs  tuple.rs  vec.rs
src/core/low/: trim.rs
src/core/prim/: bool.rs  number.rs
src/low/: trim.rs
src/std/: bool.rs  number.rs  option.rs
src/structs/: pair.rs  sep_vec.rs  trio.rs
