[package]
name = "estring"
description = "A simple way to parse a string using type annotations"
version = "0.1.2"
edition = "2018"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
readme = "README.md"
repository = "https://github.com/pleshevskiy/estring"
license = "MIT"
keywords = ["parsing", "type", "annotations", "customizable"]
categories = ["data-structures", "parsing"]

# rust-version = "1.51.0" # The first version of Cargo that supports this field is 1.56.0

[package.metadata]
msrv = "1.51.0"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
prim = ["number", "bool"]
number = []
bool = []
vec = []

[dependencies]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "calc"
required-features = ["vec", "number"]
