[package]
name = "estring"
description = "A simple way to parse a string using type annotations"
version = "0.1.2"
edition = "2021"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
readme = "README.md"
repository = "https://github.com/pleshevskiy/estring"
license = "MIT"
keywords = ["parsing", "type", "annotations", "customizable"]
categories = ["data-structures", "parsing"]
rust-version = "1.59.0"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
low-level = []
aggs = []
structs = []

[dependencies]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "calc"
required-features = ["structs"]

[[example]]
name = "dotenv"
required-features = ["structs", "low-level"]
